compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_constructor_update.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Person {\n   Person(name: String, age: Int)\n}\npub fn update_person(person: Person) {\n   NotAPerson(..person)\n}"
---
----- SOURCE CODE

pub type Person {
   Person(name: String, age: Int)
}
pub fn update_person(person: Person) {
   NotAPerson(..person)
}

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:6:4
  │
6 │    NotAPerson(..person)
  │    ^^^^^^^^^^ Did you mean `Person`?

The custom type variant constructor `NotAPerson` is not in scope here.
